# empedokles

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  build-and-run.sh  tmux-session.sh
assets/shaders/: 2D_simplest_color_shader.frag  2D_simplest_color_shader.frag.spv  2D_simplest_color_shader.vert  2D_simplest_color_shader.vert.spv  basic_shader.frag  basic_shader.frag.spv  basic_shader.vert  basic_shader.vert.spv  compute.comp  debug_shape.frag  debug_shape.vert  debug_shape_outline.frag  debug_shape_outline.vert  falling_sand.comp  particle_draw.frag  particle_draw.vert  particle_update.comp  sprite.frag  sprite.vert
cmake/: Install.cmake
demo/: CMakeLists.txt  app.hpp  main.cpp
dependancies/: CMakeLists.txt
src/: CMakeLists.txt
src/compute/: compute_manager.cpp  compute_manager.hpp
src/compute/multithreading/: thread_pool.hpp
src/core/: app.cpp  app.hpp  component.hpp  component_array.hpp  component_manager.hpp  component_system.hpp  coordinator.cpp  coordinator.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  layer.cpp  layer.hpp  system.hpp  system_base.hpp  system_manager.hpp  transform.cpp  transform.hpp
src/debug/: debug.hpp  log.cpp  log.hpp
src/graphics/: animated_sprite.cpp  animated_sprite.hpp  animated_sprite_system.cpp  animated_sprite_system.hpp  camera.cpp  camera.hpp  debug_shape.cpp  debug_shape.hpp  debug_shape_system.cpp  debug_shape_system.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  main.cpp  model.cpp  model.hpp  model_system.cpp  model_system.hpp  particle_emit_queue.hpp  particle_system.cpp  particle_system.hpp  renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp  sprite_system.cpp  sprite_system.hpp  texture.cpp  texture.hpp  utils.hpp  vertex.cpp  vertex.hpp
src/graphics/imgui/: imgui_emp_impl.cpp  imgui_emp_impl.hpp
src/graphics/render_systems/: particle_render_system.cpp  particle_render_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/graphics/systems/: debug_shape_render_system.cpp  debug_shape_render_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_2D_render_system.cpp  simple_2D_render_system.hpp  simple_render_system.cpp  simple_render_system.hpp  sprite_render_system.cpp  sprite_render_system.hpp
src/graphics/vulkan/: buffer.cpp  buffer.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp
src/gui/: console.cpp  console.hpp  gui_manager.cpp  gui_manager.hpp  log_window.cpp  log_window.hpp  overlay.cpp  overlay.hpp  spatial_visualizer.cpp  spatial_visualizer.hpp
src/gui/editor/: inspector.hpp  tree-view.cpp  tree-view.hpp
src/io/: keyboard_controller.cpp  keyboard_controller.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  serial_convert.hpp  serialized_components.cpp  serialized_components.hpp  serialized_containers.hpp  serialized_containers.inl  serializer.cpp  serializer.hpp  window.cpp  window.hpp
src/math/: geometry_func.cpp  geometry_func.hpp  math_defs.hpp  math_func.cpp  math_func.hpp  types.cpp  types.hpp
src/math/shapes/: AABB.hpp  circle.hpp  concave_polygon.hpp  convex_polygon.hpp  ray.hpp  triangle.hpp
src/memory/: allocator.hpp  linear_allocator.cpp  linear_allocator.hpp  parallel_iterator.hpp  pool_allocator.cpp  pool_allocator.hpp  relative_pointer.hpp
src/multithreading/: thread_pool.hpp
src/physics/: broad_phase.cpp  broad_phase.hpp  collider.cpp  collider.hpp  constraint.cpp  constraint.hpp  material.hpp  physics_system.cpp  physics_system.hpp  rigidbody.cpp  rigidbody.hpp
src/resources/: behaviour.hpp
src/scene/: app.cpp  app.hpp  app2D.cpp  app2D.hpp  compute_demo.hpp  hierarchy.hpp  prefab.cpp  prefab.hpp  register_scene_types.cpp  register_scene_types.hpp  renderer_context.hpp  scene_defs.hpp  transform.cpp  transform.hpp
src/templates/: common_concepts.hpp  disjoint_set.hpp  finite_state_machine.hpp  free_list.hpp  observer.hpp  quad_tree.hpp  relative_string.hpp  relative_vector.hpp  set.hpp  stack_linked_list.hpp  sweep_line.hpp  type_pack.hpp
src/utils/: RNG.hpp  perlin.hpp  time.hpp
src/vulkan/: buffer.cpp  buffer.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp
test/: CMakeLists.txt  test_example.cpp
tests/: CMakeLists.txt  test.cpp  test_main.cpp
tests/core/: test_coordinator.cpp
tests/io/: test_serializer.cpp
tests/math/: test_geometry.cpp  test_math.cpp  test_transform.cpp
tests/memory/: test_relative_pointer.cpp
tests/templates/: test_relative_string.cpp  test_relative_vector.cpp
